# dir-sync

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs  tui_help.txt
doc/: archi.md
etc/: dir-sync.conf.yaml  theme.yaml
src/: config.rs  diff.rs  dir.rs  dir_snap.rs  dir_stat.rs  dir_walk.rs  hasher.rs  lib.rs  main.rs  output.rs  proto.rs  remote.rs  snap.rs  sync_exec.rs  sync_plan.rs  tree.rs  tree_local.rs  tree_remote.rs  tui.rs
src/generic/: bitmap_categ.rs  file.rs  fs.rs  iter.rs  libc.rs  path_regex.rs  prost_stream.rs  str_diff.rs  str_or_string.rs  stream_ext.rs  task_tracker.rs  test.rs
src/generic/config/: field_mem_size.rs
src/generic/file/: api.rs  implement.rs
src/generic/format/: hash.rs  owner.rs  permissions.rs  size.rs  timestamp.rs  tree.rs
src/proto/: action.proto  common.proto  fs.proto  persist.proto  remote.proto
src/test/: ut_config.yaml
src/tui/: diff_context.rs  help.rs  list_panel.rs  render.rs  rich_text.rs  scroll_bar.rs  theme.rs
test/: basic_tree.tar.zst  justfile
