[package]
name = "dir-sync"
version = "0.1.0"
edition = "2024"
description = "CLI tool to view differences and synchronize local and remote directories"
keywords = ["cli", "diff", "folder", "remote"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/mic006/dir-sync"

[dependencies]
anyhow = "1.0.99"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
unused = { level = "warn", priority = -1 }
unsafe_code = "deny"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# disable some **too** pedantic lints
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
doc_link_with_quotes = "allow"
trivially_copy_pass_by_ref = "allow"
