[package]
name = "dir-sync"
version = "0.1.0"
edition = "2024"
description = "CLI tool to view differences and synchronize local and remote directories"
keywords = ["cli", "diff", "folder", "remote"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/mic006/dir-sync"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
blake3 = { version = "1.8.2", features = ["mmap", "rayon"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
flume = "0.12.0"
futures = "0.3.31"
libc = "0.2.178"
log = "0.4.29"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
anyhow = "1.0.100"
prost-build = "0.14.1"

[dev-dependencies]
tempfile = "3.24.0"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
unused = { level = "warn", priority = -1 }
unsafe_code = "deny"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# disable some **too** pedantic lints
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
doc_link_with_quotes = "allow"
trivially_copy_pass_by_ref = "allow"
