[package]
name = "dir-sync"
version = "0.1.0"
edition = "2024"
description = "CLI tool to view differences and synchronize local and remote directories"
keywords = ["cli", "diff", "folder", "remote"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/mic006/dir-sync"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
bitflags = "2.11.0"
blake3 = { version = "1.8.3", features = ["mmap", "rayon"] }
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false, features = [
    "events",
    "event-stream",
] }
dissimilar = "1.0.11"
env_logger = "0.11.10"
flume = "0.12.0"
futures = "0.3.32"
libc = "0.2.183"
log = "0.4.29"
memmap2 = "0.9.10"
prost = "0.14.3"
prost-types = "0.14.3"
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
    "unstable-widget-ref",
] }
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
unicode-width = { version = "0.2.2", default-features = false }
zstd = "0.13.3"

[build-dependencies]
anyhow = "1.0.102"
prost-build = "0.14.3"

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
unused = { level = "warn", priority = -1 }
unsafe_code = "deny"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# disable some **too** pedantic lints
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
doc_link_with_quotes = "allow"
trivially_copy_pass_by_ref = "allow"
